--- a/lxcfs-image/Dockerfile
+++ b/lxcfs-image/Dockerfile
@@ -1,19 +1,21 @@
 FROM centos:7 as build
 RUN yum -y update
 RUN yum -y install fuse-devel pam-devel wget install gcc automake autoconf libtool make
-ENV LXCFS_VERSION 3.1.2
+ENV LXCFS_VERSION 4.0.3
 RUN wget https://linuxcontainers.org/downloads/lxcfs/lxcfs-$LXCFS_VERSION.tar.gz && \
-	mkdir /lxcfs && tar xzvf lxcfs-$LXCFS_VERSION.tar.gz -C /lxcfs  --strip-components=1 && \
-	cd /lxcfs && ./configure && make
+        mkdir /lxcfs && tar xzvf lxcfs-$LXCFS_VERSION.tar.gz -C /lxcfs  --strip-components=1 && \
+        cd /lxcfs && ./configure && make
 
 FROM centos:7
 STOPSIGNAL SIGINT
-COPY --from=build /lxcfs/lxcfs /usr/local/bin/lxcfs
-COPY --from=build /lxcfs/.libs/liblxcfs.so /usr/local/lib/lxcfs/liblxcfs.so
-COPY --from=build /lxcfs/lxcfs /lxcfs/lxcfs
-COPY --from=build /lxcfs/.libs/liblxcfs.so /lxcfs/liblxcfs.so
+COPY --from=build /lxcfs/src/lxcfs /usr/local/bin/lxcfs
+COPY --from=build /lxcfs/src/.libs/liblxcfs.so /usr/local/lib/lxcfs/liblxcfs.so
+COPY --from=build /lxcfs/src/lxcfs /lxcfs/lxcfs
+COPY --from=build /lxcfs/src/.libs/liblxcfs.so /lxcfs/liblxcfs.so
 COPY --from=build /usr/lib64/libfuse.so.2.9.2 /usr/lib64/libfuse.so.2.9.2
 COPY --from=build /usr/lib64/libulockmgr.so.1.0.1 /usr/lib64/libulockmgr.so.1.0.1
+COPY --from=build /usr/lib64/libfuse.so.2.9.2 /lxcfs/libfuse.so.2
+COPY --from=build /usr/lib64/libulockmgr.so.1.0.1 /lxcfs/libulockmgr.so.1
 RUN ln -s /usr/lib64/libfuse.so.2.9.2 /usr/lib64/libfuse.so.2 && \
     ln -s /usr/lib64/libulockmgr.so.1.0.1 /usr/lib64/libulockmgr.so.1
 COPY start.sh /
