change ns from default to lxcfs

--- a/deployment/lxcfs-daemonset.yaml
+++ b/deployment/lxcfs-daemonset.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1beta2
 kind: DaemonSet
 metadata:
   name: lxcfs
+  namespace: lxcfs
   labels:
     app: lxcfs
 spec:
@@ -19,25 +20,15 @@ spec:
         effect: NoSchedule
       containers:
       - name: lxcfs
-        image: registry.cn-hangzhou.aliyuncs.com/denverdino/lxcfs:3.1.2
+        image: ccr.ccs.tencentyun.com/lxcfs/lxcfs:4.0.3
         imagePullPolicy: Always
         securityContext:
           privileged: true
         volumeMounts:
-        - name: cgroup
-          mountPath: /sys/fs/cgroup
         - name: lxcfs
           mountPath: /var/lib/lxcfs
           mountPropagation: Bidirectional
-        - name: usr-local
-          mountPath: /usr/local
       volumes:
-      - name: cgroup
-        hostPath:
-          path: /sys/fs/cgroup
-      - name: usr-local
-        hostPath:
-          path: /usr/local
       - name: lxcfs
         hostPath:
           path: /var/lib/lxcfs
