--- a/lxcfs-image/Dockerfile
+++ b/lxcfs-image/Dockerfile
@@ -10,8 +10,12 @@ FROM centos:7
 STOPSIGNAL SIGINT
 COPY --from=build /lxcfs/src/lxcfs /usr/local/bin/lxcfs
 COPY --from=build /lxcfs/src/.libs/liblxcfs.so /usr/local/lib/lxcfs/liblxcfs.so
+COPY --from=build /lxcfs/src/lxcfs /lxcfs/lxcfs
+COPY --from=build /lxcfs/src/.libs/liblxcfs.so /lxcfs/liblxcfs.so
 COPY --from=build /usr/lib64/libfuse.so.2.9.2 /usr/lib64/libfuse.so.2.9.2
 COPY --from=build /usr/lib64/libulockmgr.so.1.0.1 /usr/lib64/libulockmgr.so.1.0.1
+COPY --from=build /usr/lib64/libfuse.so.2.9.2 /lxcfs/libfuse.so.2
+COPY --from=build /usr/lib64/libulockmgr.so.1.0.1 /lxcfs/libulockmgr.so.1
 RUN ln -s /usr/lib64/libfuse.so.2.9.2 /usr/lib64/libfuse.so.2 && \
     ln -s /usr/lib64/libulockmgr.so.1.0.1 /usr/lib64/libulockmgr.so.1
 COPY start.sh /
